fixes: remove ScrollbarManager.tsx

--- a/src/domains/Theme/style.css
+++ b/src/domains/Theme/style.css
@@ -124,24 +124,23 @@ a, p {
     scroll-behavior: smooth;
 }
 
-::-webkit-scrollbar {
+body::-webkit-scrollbar {
     width: 5px;
     height: 8px;
 }
 
-::-webkit-scrollbar-thumb {
+body::-webkit-scrollbar-thumb {
     border-radius: 2px;
 }
 
-
-html.pdd ::-webkit-scrollbar-track  * {
-    background-color: #273dae;
+::-webkit-scrollbar-track {
+    background-color: #FFFFFF;
 }
 
-html.pdd ::-webkit-scrollbar-thumb {
-    background-color: #289FF5;
+::-webkit-scrollbar-thumb {
+    background-color: #cbcbcb;
 }
 
-html.pdd ::-webkit-scrollbar-thumb:hover  * {
-    background-color: #ae2732;
+::-webkit-scrollbar-thumb:hover {
+    background-color: #b0b0b0;
 }
